# agent-toolkit-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  STRATEGY.md  instructions-lock.json  lefthook.yml  mkdocs.yml  pyproject.toml  release-please-config.json  skills-lock.json  test-lefthook.sh
.github/workflows/: docs.yml  install-smoke.yml  release.yml  schema-drift.yml  test.yml
audit/: build-doc.sh  discover-matrix.sh  run-all.sh
audit/demos/: agent-claude.sh  agent-gemini.sh  agent-opencode.sh  agent-pi.sh  command-claude.sh  command-gemini.sh  command-opencode.sh  hook-claude.sh  hook-codex.sh  mcp-claude.sh  mcp-codex.sh  mcp-gemini.sh  mcp-opencode.sh  pi-extension-pi.sh  plugin-claude.sh  skill-claude.sh  skill-codex.sh  skill-gemini.sh  skill-opencode.sh  skill-pi.sh
audit/lib/: assert.sh  code_probe.py  narrate.sh  sandbox.sh
docs/: glossary.md  index.md  matrix.md
docs/agent-toolkit/: bundles.md  cli.md  harness-matrix.md  lock-files.md  roadmap.md  schema.md  skill-lock.md  tui.md
docs/api/: index.md
docs/asset-types/: agents.md  commands.md  instructions.md  mcp.md  pi-extensions.md  skills.md
docs/audit/: 2026-05-19-toolkit-audit.md
docs/harnesses/: adal.md  aider-desk.md  amp.md  antigravity.md  augment.md  bob.md  claude-code.md  cline.md  codearts-agent.md  codebuddy.md  codemaker.md  codestudio.md  codex.md  command-code.md  continue.md  cortex.md  crush.md  cursor.md  deepagents.md  devin.md  dexto.md  droid.md  firebender.md  forgecode.md  gemini-cli.md  github-copilot.md  goose.md  hermes-agent.md  iflow-cli.md  junie.md  kilo.md  kimi-cli.md  kiro-cli.md  kode.md  mcpjam.md  mistral-vibe.md  mux.md  neovate.md  openclaw.md  opencode.md  (+15 more)
docs/javascripts/: extra.js
docs/kinds/: agents.md  instructions.md  mcp.md  pi-extensions.md  skills.md
docs/stylesheets/: extra.css
schemas/: asset-frontmatter.v1alpha1.json  asset-frontmatter.v1alpha2.json
scripts/: gen_harness_docs.py  migrate_skills_split.py
src/agent_toolkit/: __init__.py  _allowlist.py  _repo_resolution.py  _requires.py  _support.py  _translators.py  _ui.py  cli.py  inventory.py  schema.py  walker.py
src/agent_toolkit_cli/: __main__.py  _allowlist.py  _install_core.py  _paths_core.py  cli.py  (+47 more)
tests/: conftest.py  test_allowlist.py  test_check.py  test_check_conventions_drift.py  test_check_mutex.py  test_check_skill_shape.py  test_claude_plugin_adapter.py  test_cli_asset_type_aliases.py  test_cli_diff.py  test_cli_help.py  test_cli_link.py  test_cli_list.py  test_cli_mcp.py  test_cli_pi.py  test_cli_skill_help_examples.py  test_cli_unlink.py  test_codex_hook_adapter.py  test_conftest_git_env_scrub.py  test_doctor.py  test_doctor_allowlist_audit.py  test_doctor_autofix.py  test_doctor_autofix_dryrun.py  test_doctor_groups.py  test_doctor_harness_homes.py  test_doctor_mcps.py  test_doctor_orphans.py  test_doctor_per_resource.py  test_doctor_pi_advisories.py  test_doctor_skill_shape.py  test_doctor_strict_flag.py  test_doctor_user_scope_coverage.py  test_fix.py  test_generators.py  test_get_adapter_kind_aware.py  test_harness_adapters_base.py  test_harness_docs.py  test_harness_matrix.py  test_hook_dispatch.py  test_ingest_finalize.py  test_ingest_identify.py  (+66 more)
(+825 files in other folders)
