[project]
name = "agent-toolkit"
version = "0.6.0"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "click>=8.1",
    "ruamel.yaml>=0.18",
    "tomlkit>=0.13",
    "textual>=0.79",
]

[project.scripts]
agent-toolkit-cli = "agent_toolkit_cli.cli:main"
agent-toolkit-tui = "agent_toolkit_tui.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-snapshot>=0.9",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_toolkit_cli", "src/agent_toolkit_tui"]

[tool.hatch.build.targets.wheel.force-include]
"src/agent_toolkit_cli/_schemas/asset-frontmatter.v1alpha2.json" = "agent_toolkit_cli/_schemas/asset-frontmatter.v1alpha2.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
