[project]
name = "agent-toolkit"
version = "2.7.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "textual>=0.79",
    "questionary>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
agent-toolkit-cli = "agent_toolkit_cli.cli:main"
agent-toolkit-tui = "agent_toolkit_tui.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-snapshot>=0.9",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_toolkit_cli", "src/agent_toolkit_tui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
